# porygon

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: validate_manifests.py
.github/workflows/: ci.yml  release-please.yml  release.yml
agents/: build-doctor.md  map-architect.md  script-doctor.md
assets/: README.md
atlas/: .gitignore  Cargo.toml  README.md
atlas/apps/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
atlas/apps/desktop/src/: App.tsx  commands.ts  styles.css
atlas/apps/desktop/src/canvas/: CanvasEngine.ts  grid.ts  playSim.ts
atlas/apps/desktop/src/components/: BackdropControls.tsx  BudgetMeter.tsx  Canvas.tsx  CollisionControls.tsx  CommandPalette.tsx  ContextMenu.tsx  Inspector.tsx  LayerControls.tsx  ObjectLibrary.tsx  OcclusionControls.tsx  Panel.tsx  PlayControls.tsx  Preferences.tsx  ProblemsPanel.tsx  ResizeHandle.tsx  ShortcutsHelp.tsx  StartScreen.tsx  TilesetBuilder.tsx  TilesetLibrary.tsx  Toasts.tsx  Toolbar.tsx  ToolbarButton.tsx  Workspace.tsx
atlas/apps/desktop/src/hooks/: useGlobalShortcuts.ts
atlas/apps/desktop/src/lib/: api.ts  shortcuts.ts
atlas/apps/desktop/src/store/: canvas.ts  history.ts  preferences.ts  project.ts  toasts.ts  ui.ts
atlas/crates/atlas/: Cargo.toml  tauri.conf.json
atlas/crates/atlas/capabilities/: default.json
atlas/crates/atlas/icons/: icon.icns
atlas/crates/atlas/src/: artwork.rs  budgets.rs  collision.rs  exporter.rs  lib.rs  main.rs  object.rs  occlusion.rs  pokemon_emerald.rs  porytiles.rs  prefabs.rs  project.rs  recents.rs  scene.rs  settings.rs  tileset.rs  validity.rs
atlas/crates/atlas/tests/fixtures/porytiles/: baddims.stderr.txt  palbudget.stderr.txt  toomanycolors.stderr.txt  triple.stderr.txt  unknown_behavior.stderr.txt
atlas/docs/: beta-checklist.md  troubleshooting.md
atlas/plans/: bible.md  compiler.md  implementation.md  phase2.md
atlas/spikes/spike0/: FINDINGS.md  PREFAB-FINDINGS.md  decode.py  mkerr.py  mkpng.py
atlas/spikes/spike0/tree_tileset/porytiles_bin/palettes/: 00.pal  01.pal  06.pal  07.pal  08.pal  09.pal
commands/: em-build.md  em-debug.md  em-map.md  em-script.md
mcp/: README.md  pyproject.toml
mcp/src/porygon/: __init__.py  cli.py  server.py
mcp/src/porygon/core/: __init__.py  attributes.py  basics.py  blockdata.py  build.py  compose.py  constants.py  diagnostics.py  emu.py  imaging.py  project.py  scripting.py  tileset.py  tileset_register.py
mcp/src/porygon/data/: stamps.json  terrain.json
mcp/src/poryml/: __init__.py  cli.py  server.py
mcp/src/poryml/core/: __init__.py  project.py
mcp/tests/: conftest.py  test_addmap.py  test_basics.py  test_blockdata.py  test_build.py  test_compose.py  test_diagnostics.py  test_emu.py  test_forks.py  test_imaging.py  test_mapwiring.py  test_project.py  test_scripting.py  test_tileset.py  test_tileset_register.py
playtester/: MODEL.md  README.md  emu.py  manifest.example.json  pokeemerald_platinum.py  porygon_io_server.lua  runner.py
playtester/checkpoints/pokeemerald-platinum/: 04_leaving_sandgem.ss  after_starter.ss  first_movement.ss
playtester/games/pokeemerald_platinum/: manifest.json  profile.py
playtester/games/pokeemerald_platinum/checkpoints/: .gitkeep  00_first_movement.ss  01_before_starter.ss  03_sandgem_complete.ss
playtester/games/pokeemerald_platinum/recordings/: 01_firstmove_to_starter.json  02_starter_to_afterstarter.json  04_sandgem_to_leaving.json
playtester/recordings/pokeemerald-platinum/: afterstarter_to_sandgem.json
porymap-scripts/: porygon-collision-overlay.js
skills/debug-loop/: SKILL.md
skills/event-scripting/: SKILL.md
skills/map-from-image/: SKILL.md
skills/map-from-image-existing/: SKILL.md
skills/map-from-image-semantic/: SKILL.md
templates/: pokeemerald-CLAUDE.md
