[project]
name = "porygon"
version = "0.3.0"
description = "Deterministic primitives for AI-augmented pokeemerald ROM hacking (binary blockdata I/O, project parsing, build/debug, event scripting, map wiring)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.28.0",
    "pyelftools==0.33",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
]

[project.scripts]
porygon = "porygon.cli:main"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/porygon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
