[project]
name = "porygon"
version = "0.1.0" # x-release-please-version
description = "Deterministic primitives for AI-augmented pokeemerald ROM hacking (binary blockdata I/O, project parsing, build/debug, event scripting, map wiring)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.28.0",
    "pyelftools==0.33",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.14.4",
]

[project.scripts]
porygon = "porygon.cli:main"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/porygon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors/warnings (E/W), isort (I), bugbear (B)
select = ["E", "F", "W", "I", "B"]
# Line length is advisory here; not enforced as a hard gate.
ignore = ["E501"]
