[package]
name = "atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Porygon desktop app (Tauri shell)"

# Split into a lib + thin bin so the app entry point stays testable and the
# bin name doesn't collide with the crate's default lib name.
[lib]
name = "atlas_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }

[dependencies]
tauri = { version = "=2.11.1", features = [] }
tauri-plugin-dialog = "=2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Encode PNG bytes for the IPC bridge; a JSON byte array would bloat 20 MB into
# ~60 MB of numbers, so base64 keeps the payload compact.
base64 = "=0.22.1"

[lints]
workspace = true
